fix(bee-input-group): border-collapse: unset

--- a/src/InputGroup.scss
+++ b/src/InputGroup.scss
@@ -6,7 +6,7 @@
 .u-input-group {
 	position: relative;
     display: table;
-    border-collapse: separate;
+    border-collapse: unset;
     .u-input-group-btn .u-button{
     	border: 1px solid #ccc;
     	height: 30px;
